      never freed due to circular references.
    * Fix rare APG solver crash. (BR 290533)
    * Compilations are handled more consistently on iPods. (BR 232072)
    * MPRIS2 compliance: don't use track ids that start with /org/mpris/
    * MPRIS2: be better about emitting the Seeked signal
    * MPRIS2: fix the mpris:artUrl metadata property

VERSION 2.5
  FEATURES:
    * Now It's possible to use formated strings for prefix and suffix in 
      Playlist's layout items.

  BUGFIXES:
    * Do not crash when iPod doesn't have a master playlist. (BR 288936)
    * Fix Last.fm not finding KDE Wallet. (BR 286741)
    * Put a border around bottom toolbars, visually separating them from
      browser contents. (BR 277741)
    * Align the bottom toolbars.
    * Allow albums with empty name but nonempty artist in local collection. (BR 272471)
    * Fix collection info display (track count, free space) for iPod and MTP
      devices. (BR 232093)
    * Fix crash at exit with Qt 4.8
    * Fix moving applets rightward in the context toolbar.
    * Fix breadcrumbs not working properly for the file browser.
    * Disable cover fetching action for tracks not in the collection to avoid
      crash when trying to "save as" a cover. (BR 287604)
    * Show default cover in tag dialog when track is not in the collection.
    * Fix directory selection when opening album location in tag dialog.
    * Fix crash in CoverFoundDialog if progress dialog is cancelled just
      before fetch is done.
    * Correctly parse disambiguation pages for songs in the English Wikipedia. (BR 270054)
    * Fix wrong context view applets sizes on start up in some cases.
    * Fix Amarok consuming CPU until main window is shown. (BR 278897)
    * Fix last.fm 'scrobble composer' option's fallback to artist (BR 286215)
    * Fix volume control from within Amarok.
    * Fix slow startup because of imported playlists. (BR 284761)
    * Fix audio CD detection on Amarok start. (BR 276032)